# kokoro-kindle-reader

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  HEADLESS.md  LICENSE  README.md  index.html  model-manifest.json  package.json  vite.config.ts
.claude/agents/: doc-sync.md
.claude/commands/: bump-version.md  codex-review.md  commit-push.md  sync-docs.md  update-workflow-actions.md
.github/workflows/: headless-installer.yml  hook.yml  installer.yml  native.yml  sapi-rs.yml  sapi.yml
icons/: icon.icns
kokoro-bench/: Cargo.toml  README.md  build.rs
kokoro-bench/src/: main.rs
kokoro-hook/: Cargo.toml  README.md
kokoro-hook/src/: lib.rs
kokoro-host/: Cargo.toml  README.md  build.rs
kokoro-host/src/: espeak.rs  kindle_watch.rs  main.rs  native_synth.rs  pipe.rs  split_text.rs  text.rs
kokoro-inject/: Cargo.toml  README.md
kokoro-inject/src/: main.rs
kokoro-panel/: Cargo.toml  README.md  build.rs
kokoro-panel/src/: download.rs  kindle.rs  kindle_reader.rs  main.rs  preview.rs
kokoro-panel/ui/: panel.slint
kokoro-protocol/: Cargo.toml  README.md
kokoro-protocol/src/: lib.rs
kokoro-sapi/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.ps1  test-speak.ps1  voice-setup.ps1
kokoro-sapi-rs/: Cargo.toml  README.md  kindle-voice-guard.ps1
kokoro-sapi-rs/src/: lib.rs  protocol.rs  worker.rs
kokoro-sapi-smoke/: Cargo.toml  README.md  run-speak-test.ps1
kokoro-sapi-smoke/src/: main.rs
kokoro-sapi/src/: Dll.cpp  Guids.cpp  Guids.h  KokoroTTSEngine.cpp  KokoroTTSEngine.h  Log.h  StrConv.h  WorkerClient.cpp  WorkerClient.h  WorkerProtocol.h  engine.rs  kokoro_sapi.def  lib.rs  sapi.rs  worker.rs
kokoro-sapi/tools/: onecore_probe.cpp
kokoro-worker/: .gitignore
kokoro-worker/ffi-probe/: Cargo.toml  build.rs
kokoro-worker/ffi-probe/src/: main.rs
kokoro-worker/src/: KokoroSynth.cpp  KokoroSynth.h  KokoroText.cpp  KokoroText.h  kokoro_ffi.cpp  kokoro_ffi.h
kokoro-worker/tools/: build-espeak.ps1  build-test.ps1  fetch-deps.ps1  kokoro_synth_test.cpp
native-deps/: .gitignore  README.md  build-espeak.ps1  fetch-deps.ps1
native-deps/tools/: build-espeak.ps1  fetch-deps.ps1
packaging/: .gitignore  README.md  build-installer.ps1  installer.nsi
src/: App.tsx  Setup.tsx  bridge.ts  main.tsx  theme.tsx  tts.ts  tts.worker.ts  voices.ts
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  model-manifest.json  tauri.conf.json
src-tauri/examples/: dml_patch.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  native_synth.rs  onnx_patch.rs  pipe_server.rs  split_text.rs
