[package]
name = "kokoro-hook"
version = "0.3.1"
edition = "2021"
description = "x86 hook DLL injected into Kindle 18632+: forces its new SpVoiceEngine to narrate with the Kokoro SAPI5 voice by patching the shared ISpVoice::SetVoice vtable slot."

# Injected into 32-bit Kindle.exe -> MUST be x86:
#   cargo build --release --target i686-pc-windows-msvc
[lib]
name = "kokoro_hook"
crate-type = ["cdylib", "lib"]

# Kindle-free proof the vtable override works (no injection, no audio needed):
#   cargo run --release --target i686-pc-windows-msvc --bin selftest
[[bin]]
name = "selftest"
path = "src/bin/selftest.rs"

[dependencies]
windows-core = "0.62"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Media_Speech",
] }

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
strip = true

[profile.dev]
panic = "abort"
