[package]
name = "kokoro-host"
version = "0.1.0"
edition = "2021"
description = "Headless synthesis host for Kokoro Kindle Reader (no WebView2)"

# Standalone crate (own target dir), not a workspace member. build.rs compiles
# kokoro-worker's C++ synth core; native_synth.rs / split_text.rs live in src/.

[[bin]]
name = "kokoro-host"
path = "src/main.rs"

[build-dependencies]
cc = "1"
# Embed a Windows version resource (FileDescription/ProductName/icon) so the exe
# shows a friendly name + icon in Task Manager / Explorer instead of the bare file.
winresource = "0.1"

[dependencies]
# Named-pipe server + async streaming/pacing (the Tauri-free pipe path).
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "time", "macros"] }
# controls.json parsing (shared with native_synth.rs::read_controls).
serde_json = "1"
# System tray + its event loop. tao (Tauri's windowing lib) hosts a windowless
# message loop; tray-icon adds the tray + menu. No webview — this is the whole GUI
# surface of the host (the settings panel is a separate process, M3).
tao = "0.30"
tray-icon = "0.19"
# Register the host to auto-start hidden at login (HKCU Run on Windows), so Kindle
# always has its synthesis host. Mirrors the Tauri app's `kokoro-kindle-reader`
# Run value so the two don't double-register.
auto-launch = "0.5"
# Decode the bundled PNG into RGBA for the tray icon (png only — keep it light).
image = { version = "0.25", default-features = false, features = ["png"] }
