[package]
name = "kokoro-host"
version = "0.3.2"
edition = "2021"
description = "Synthesis host for Kokoro Kindle Reader"

# Standalone crate (own target dir), not a workspace member. The synth core is pure
# Rust: native_synth.rs (ort WebGPU) + text.rs / espeak.rs / split_text.rs in src/.

[[bin]]
name = "kokoro-host"
path = "src/main.rs"

[build-dependencies]
# Embed a Windows version resource (FileDescription/ProductName/icon) so the exe
# shows a friendly name + icon in Task Manager / Explorer instead of the bare file.
winresource = "0.1"

[dependencies]
# The named-pipe wire format, shared with the SAPI engine (one source of truth).
kokoro-protocol = { path = "../kokoro-protocol" }
# Named-pipe server + async streaming/pacing.
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "time", "macros"] }
# controls.json + tokenizer.json parsing (native_synth.rs).
serde_json = "1"
# Kokoro ONNX inference on the Dawn WebGPU EP. load-dynamic loads the staged
# onnxruntime.dll at runtime (the WebGPU EP register() is enabled by it); an explicit
# api-NN feature is required under default-features=false (the 1.27 wheel is API 27, so
# api-24 — the max ort-sys exposes — is fine, DLLs are backward-compatible).
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24"] }
# System tray + its event loop. tao (Tauri's windowing lib) hosts a windowless
# message loop; tray-icon adds the tray + menu — the whole GUI surface of the host
# (the settings panel is a separate process).
tao = "0.30"
tray-icon = "0.19"
# Register the host to auto-start hidden at login (HKCU Run on Windows), so Kindle
# always has its synthesis host. Uses the same `kokoro-kindle-reader` Run value as
# prior releases so an existing install isn't double-registered.
auto-launch = "0.5"
# Decode the bundled PNG into RGBA for the tray icon (png only — keep it light).
image = { version = "0.25", default-features = false, features = ["png"] }
# Kindle-watcher (kindle_watch.rs): enumerate processes to detect Kindle.exe. The actual
# injection is done by the separate x86 kokoro-inject.exe the watcher spawns.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
] }
