[package]
name = "kokoro-panel"
version = "0.3.1"
edition = "2021"
description = "Native settings panel for Kokoro Kindle Reader (Slint)"

# Separate from the headless host so the GUI toolkit doesn't bloat the always-on
# tray binary. The tray spawns this on demand; it reads/writes the same
# controls.json the host reads per utterance, so changes land on Kindle's next
# page. Preview synthesizes via the host's pipe (same engine as Kindle).

[[bin]]
name = "kokoro-panel"
path = "src/main.rs"

[build-dependencies]
# Compiles ui/panel.slint into Rust (styled with the Fluent theme).
slint-build = "1"
# Embed a Windows version resource (FileDescription/ProductName/icon) so the exe
# shows a friendly name + icon in Task Manager / Explorer instead of the bare file.
winresource = "0.1"

[dependencies]
slint = "1"
serde_json = "1"
# Named-pipe wire format shared with the host (single source of truth), so Preview's
# pipe client can't drift from kokoro-host/pipe.rs + the SAPI engine.
kokoro-protocol = { path = "../kokoro-protocol" }
# Preview playback. The panel synthesizes a per-voice intro through the host's pipe
# (same engine + controls.json as Kindle) and plays the returned PCM with rodio.
rodio = { version = "0.19", default-features = false }
# Model download/verify (blocking client on a bg thread; rustls avoids a system
# OpenSSL dep). Files stream from HuggingFace per model-manifest.json; each is
# SHA-256-verified before commit.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
sha2 = "0.10"
# Drive Kindle's "Assistive reader" (Read Aloud) toggle via UI Automation — the new
# Kindle exposes it as a UIA ToggleButton, so the x64 panel can flip it in the x86
# Kindle (UIA is an OS service, cross-bitness). Wraps the painful COM/VARIANT plumbing.
uiautomation = "0.25"
# Hands-free Read Aloud: foreground the x86 Kindle window (AttachThreadInput) and send
# its Ctrl+A toggle shortcut via raw SendInput. Same version uiautomation already pulls.
# Win32_System_Diagnostics_ToolHelp: find Kindle.exe by process image name (same
# technique as kokoro-host's kindle-watch/kokoro-inject) instead of a UIA window-title
# match, which only works for an English-language "Kindle" title.
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp"] }
