# Standalone de-risk probe for the Rust -> C++ (KokoroSynth WebGPU) FFI seam.
# Compiles the C++ synth core via build.rs (cc) and drives it from Rust to a WAV.
# Empty [workspace] keeps it isolated from src-tauri.
[package]
name = "ffi-probe"
version = "0.0.0"
edition = "2021"

[workspace]

[build-dependencies]
cc = "1"
